--- a/data-tidying.Rmd
+++ b/data-tidying.Rmd
@@ -43,6 +43,31 @@ head(catch_long)
 ```
 
 
+
+
+
+
+
+```{r}
+catch_cleaned <- catch_long %>% 
+  rename(catch_thousands = catch) #%>% 
+ # mutate(catch = catch_thousands * 1000)
+
+head(catch_cleaned)
+
+
+```
+ 
+ 
+```{r}
+test_catch <- as.integer(catch_cleaned$catch_thousands)
+
+i <- which(is.na(test_catch) == T)
+
+catch_cleaned[i, ]
+
+```
+
 # Split-Apply-Combine
 
 # Joins
