--- a/data-tidying.Rmd
+++ b/data-tidying.Rmd
@@ -43,23 +43,25 @@ head(catch_long)
 ```
 
 
-
-
-
+* erroneous value due to OCR issue - change "I" to one
+* create catch column in correct units
 
 
 ```{r}
 catch_cleaned <- catch_long %>% 
-  rename(catch_thousands = catch) #%>% 
- # mutate(catch = catch_thousands * 1000)
+  rename(catch_thousands = catch) %>%
+  mutate(catch_thousands = ifelse(catch_thousands == "I", 1, catch_thousands)) %>% 
+  mutate(catch_thousands = as.integer(catch_thousands)) %>% 
+  mutate(catch = catch_thousands * 1000)
 
-head(catch_cleaned)
+tail(catch_cleaned)
 
 
 ```
  
  
-```{r}
+```{r, eval = F, echo = F}
+# I used this code to find the bad value
 test_catch <- as.integer(catch_cleaned$catch_thousands)
 
 i <- which(is.na(test_catch) == T)
@@ -70,6 +72,72 @@ catch_cleaned[i, ]
 
 # Split-Apply-Combine
 
+
+Calculate total catch by region
+
+```{r}
+catch_total <- catch_cleaned %>% 
+  group_by(Region, Year) %>% 
+  summarize(catch_region = sum(catch), 
+            n_obs = n())
+
+catch_total
+```
+
+Matt's Challenge
+
+```{r}
+catch_matt <- catch_cleaned %>% 
+  group_by(species, Year) %>% 
+  summarize(catch_mean = mean(catch), # calculate mean
+            catch_sd = sd(catch),
+            catch_n = n()) # total observations
+
+head(catch_matt)
+```
+
+Filter for chinook salmon
+
+| or operator
+
+```{r}
+catch_chinook <- catch_cleaned %>% 
+  filter(species == "Chinook" & Region == "SSE" & Year > 1990) %>% 
+  arrange(-Year)
+
+head(catch_chinook)
+```
+
+
 # Joins
+
+Read in region definitions files
+
+```{r}
+region_defs <- read.csv(url("https://knb.ecoinformatics.org/knb/d1/mn/v2/object/df35b.303.1", method = "libcurl"),
+                        stringsAsFactors = FALSE)
+
+head(region_defs)
+```
+Clean up region definitions data
+
+```{r}
+region_clean <- region_defs %>% 
+  select(code, mgmtArea)
+
+head(region_clean)
+
+```
+
+```{r}
+
+catch_joined <- left_join(catch_cleaned, region_clean, 
+                          by = c("Region" = "code"))
+
+
+head(catch_joined)
+test <- c("Region" = "code")
+```
+
 
 
