--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Untitled"
+title: "Data Visualization"
 output: html_document
 ---
 
@@ -7,22 +7,62 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r, warning = F, message = F}
+library(dplyr)
+library(tidyr)
+library(ggplot2)
 ```
 
-## Including Plots
 
-You can also embed plots, for example:
+# Reformat the data for plotting
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+Alaska Department of Fish and Game, Division of Commercial Fisheries. 2017. Daily salmon escapement counts from the OceanAK database, Alaska, 1921-2017. Knowledge Network for Biocomplexity. doi:10.5063/F1S46Q6M.
+
+```{r}
+esc <- read.csv(url("https://knb.ecoinformatics.org/knb/d1/mn/v2/object/urn%3Auuid%3Af119a05b-bbe7-4aea-93c6-85434dcb1c5e", method = "libcurl"), stringsAsFactors = F)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+* calculate annual escapment by species and region
+  + `separate`
+  + `group_by`
+  + `summarize` using the `sum` function
+* filter for just pacific salmon (Sockeye, Chinook, Coho, Pink, Chum)
+  + `filter`
+
+annual_esc
+
+```{r}
+annual_esc <- esc %>% 
+  separate(sampleDate, into = c("year", "month", "day"), sep = "-") %>% 
+  mutate(year = as.numeric(year)) %>% # coerce year to numeric type
+  group_by(year, Species, SASAP.Region) %>% 
+  summarise(count = sum(DailyCount)) %>% 
+  filter(Species %in% c("Chinook", "Sockeye", "Chum", "Coho", "Pink"))
+```
+
+
+# Generate some static plots
+
+```{r}
+ggplot(annual_esc, mapping = aes(x = Species, y = count, fill = SASAP.Region)) +
+  geom_col()
+```
+
+```{r}
+my_theme <- theme_test() +
+  theme(legend.position = "bottom", legend.title = element_blank())
+```
+
+
+```{r}
+ggplot(filter(annual_esc, SASAP.Region == "Kodiak"), aes(x = year, y = count, color = Species)) +
+  geom_line() +
+  geom_point() +
+  ylab("Escapement (num of fish)") +
+  xlab("Year") +
+  ggtitle("Kodiak Salmon Escapement") +
+  my_theme
+```
+
+
+# Generate an interactive map
